# coralogix-otel-logger

./: .flake8  CONTRIBUTING.md  README.md  build.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml  publish.yml
src/cxlogger/: __init__.py  cxlogger.py  exceptions.py  logger.py
tests/: test_cxlogger.py
