[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coralogix-otel-logger"
description = "A production-grade OpenTelemetry logger for Coralogix gRPC endpoints."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"

authors = [
  { name="nix-power", email="dima@nix-power.com" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: OpenTelemetry",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]


dependencies = [
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1"
]

dynamic = [
	"version"
]

[project.urls]
Homepage = "https://github.com/nix-power/coralogix-otel-logger"
Repository = "https://github.com/nix-power/coralogix-otel-logger"

[tool.hatch.version]
path = "src/cxlogger/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cxlogger"]

